tests/baselines/reference/asyncMethod6.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod6.ts(7,22): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod6.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async foo(a = await): Promise<void> {
                         ~
!!! error TS1109: Expression expected.
      }
    }